overhaul: added profile button info to mobile/desktop nav, switched to using different heroicons package (that doesn't export all 200kb at once), forced scrollbars to always show to prevent layout shift

--- a/pages/global.css
+++ b/pages/global.css
@@ -33,4 +33,8 @@
 html,
 body {
   height: 100%;
+  width: 100vw;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  /* width: 98vw; */
 }
